--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -187,6 +187,20 @@ import Layout from '../layouts/BlogPost.astro';
 				<p>Realizado con Unity con el lenguaje C#</p>
 			</div>
 		</div>
+		<div class="card">
+			<img src="/juego.png" alt="proyecto" class="card-icon">
+			<div class="card-info">
+				<h3>JUEGO FLAPPY BIRD</h3>
+				<p>Realizado con Unity con el lenguaje C#</p>
+			</div>
+		</div>
+		<div class="card">
+			<img src="/ventas.png" alt="proyecto" class="card-icon">
+			<div class="card-info">
+				<h3>SISTEMA DE VENTAS</h3>
+				<p>Realizado con Netbeans con el lenguaje Java y en MySQL</p>
+			</div>
+		</div>
 	</section>
 	<p class="texto"> 
 		En el futuro, quiero combinar mi pasión por los videojuegos con mis habilidades de
@@ -194,6 +208,6 @@ import Layout from '../layouts/BlogPost.astro';
 		Además, me gustaría seguir creciendo en el desarrollo web y móvil.
 	</p>
 	<p class="texto"> 
-		Si deseas ponerte en contacto conmigo, visita la sección 'Contactos' para hacerlo.
+		Si deseas saber más acerca de los proyectos, visita la sección 'Portafolio' para hacerlo.
 	</p>
 </Layout>
