--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,9 +118,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					</div>
 				</div>
 				<div class="card">
-					<img src="/angular.png" alt="Angular" class="card-icon">
+					<img src="/netbeans.png" alt="Netbeans" class="card-icon">
 					<div class="card-info">
-						<h3>Angular</h3>
+						<h3>Netbeans</h3>
 						<p>2024</p>
 					</div>
 				</div>
@@ -163,10 +163,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					</div>
 				</div>
 				<div class="card">
-					<img src="/python.png" alt="Python" class="card-icon">
+					<img src="/html.png" alt="Html" class="card-icon">
 					<div class="card-info">
-						<h3>Python</h3>
-						<p>2023</p>
+						<h3>HTML</h3>
+						<p>2022</p>
 					</div>
 				</div>
 			</section>
