--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,13 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
 ---
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Inicio</HeaderLink>
 			<HeaderLink href="/about">Acerca de mi</HeaderLink>
+			<HeaderLink href="/portfolio">Portafolio</HeaderLink>
 			<HeaderLink href="/about copy">Contactos</HeaderLink>
 		</div>
 	</nav>
